--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rnacanvas/ct",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Parse CT format",
   "repository": {
     "type": "git",
@@ -28,6 +28,8 @@
     "webpack-cli": "^6.0.1"
   },
   "dependencies": {
+    "@rnacanvas/position-pairs": "^2.4.0",
+    "@rnacanvas/utilities": "^5.2.0",
     "jquery": "^3.7.1"
   }
 }
